webgui: if top menu with sections overflows available space, overflowed links will collapse into popup submenu - it adds double down arrow at the end of the line - fixes #734

--- a/src/FIT/NetopeerBundle/Resources/public/sass/screen.scss
+++ b/src/FIT/NetopeerBundle/Resources/public/sass/screen.scss
@@ -79,9 +79,23 @@ nav#top, div#top { @include background( linear-gradient(darken($cBase, 5%), dark
 		span { background: url($img + 'ico/16_refresh.png') center center no-repeat; }
 	}
 
+	.others-cover { float:right; position:relative;
+		.show-link, .others { display:none; }
+		.show-link { background: $cComp1Dark; border-left: 1px solid lighten($cComp1Dark, 10%); width: 30px; height: $hNavTop; border-right: 1px solid desaturate($cComp1Light, 50%);
+			span { text-align:center; background: url($img + 'ico/16_arrow_down.png') center center no-repeat; display:block; width: 30px; }
+		}
+		&.visible {
+			.show-link { display:block; }
+		}
+		.others { position:absolute; right: 0px; top: $hNavTop; min-width: 150px; @include background(rgba(darken($cBase, 5%), 0.9)); @include single-box-shadow(rgba(0,0,0,0.4), 0px, 0px, 8px);
+			a { border-bottom: 1px solid #000; display:block; padding: 10px 20px; color: #fff; font-size: 1.25em; text-decoration:none; text-align:right; line-height: 1em;
+				&:hover { background: $cComp1Dark; }
+			}
+		}
+	}
 
 
-	#userpane { float: right; height: $hNavTop; padding: 0px $sContentPadding 0px $sContentPadding + 16px + 10px; color: #ccc; background: url($img + 'ico/16_users-o50.png') 50% 5px no-repeat $cComp1Dark; background: url($img + 'ico/16_users-o50.png') 10px (40px - 16px)/2 - 1px no-repeat rgba($cComp1Dark, 0.8); border-left: 1px solid #000; margin-left: 20px; font-size: 1.2em;
+	#userpane { float: right; height: $hNavTop; padding: 0px $sContentPadding 0px $sContentPadding + 16px + 10px; color: #ccc; background: url($img + 'ico/16_users-o50.png') 50% 5px no-repeat $cComp1Dark; background: url($img + 'ico/16_users-o50.png') 10px (40px - 16px)/2 - 1px no-repeat rgba($cComp1Dark, 0.8); border-left: 1px solid #000; font-size: 1.2em;
 		.log-out { border-left: 1px solid lighten($cFont, 10%); padding-left: 7px; @include link-colors(#ccc, $cComp1Light); margin-left: 5px;
 			&:hover { text-decoration: none; }
 		}
